# QuantDesk

./: CMakeLists.txt  README.md  main.cpp  package-lock.json  test_build.cpp
broker/: factory.hpp  interface.hpp  manager.hpp  registry.cpp  registry.hpp  result.hpp
broker/brokers/: README.md
common/: greeks.hpp  instrument.hpp  money.hpp  option_chain.hpp  order_request.hpp  order_response.hpp  quote.hpp  types.cpp  types.hpp
core/: application.cpp  application.hpp
data/: economic.hpp
data/economic/: interestRates.hpp  sentiment.hpp
data/providers/avantage/: getAVantageData.hpp
data/providers/fred/: getFredData.hpp
data/providers/yahoo/: getYahooData.hpp
gui/: main_window.hpp
gui/widgets/: market_data.hpp  order_entry.hpp  portfolio.hpp  risk.hpp  strategy.hpp
interfaces/: broker.hpp  strategy.hpp
market/: conditions.hpp
math/: engine.hpp  hardware_capabilities.hpp
math/analytics/: performance.cpp  performance.hpp  probability.cpp  probability.hpp  risk.cpp  risk.hpp
math/core/: engine.cpp  engine.hpp  memory.cpp  memory.hpp  threading.cpp  threading.hpp  types.hpp  utils.cpp  utils.hpp
math/curves/: yield_curve.cpp  yield_curve.hpp
math/forecasting/: monte_carlo.cpp  monte_carlo.hpp
math/greeks/: calculator.cpp  calculator.hpp  firstOrder.cpp  firstOrder.hpp  portfolio.cpp  portfolio.hpp  secondOrder.cpp  secondOrder.hpp  sensitivities.cpp  sensitivities.hpp  thirdOrder.cpp  thirdOrder.hpp
math/metrics/: probability.hpp  volatility.hpp
math/optimization/: cache.hpp  gpu.hpp  hardware.cpp  hardware.hpp  parallel.hpp  simd.hpp
math/pricing/: analytical.cpp  analytical.hpp  enhanced_bs.cpp  enhanced_bs.hpp  exotic.cpp  exotic.hpp  numerical.hpp  simulation.cpp  simulation.hpp
math/simulation/: params.hpp  paths.cpp  paths.hpp  results.hpp  scenarios.hpp  variance_reduction.cpp  variance_reduction.hpp
math/structure/: macrostructure.hpp
math/trees/: binomial.hpp  trinomial.hpp
math/volatility/: calibration.cpp  calibration.hpp  models.cpp  models.hpp  surface.cpp  surface.hpp
portfolio/: manager.cpp  manager.hpp  metrics.hpp  position.cpp  position.hpp  risk.hpp
portfolio/risk/: assessment.hpp  limits.hpp  risk_manager.hpp
strategy/: engine.cpp  engine.hpp  opportunity.cpp  opportunity.hpp  optimization.cpp  optimization.hpp  strategy_engine.cpp  strategy_engine.hpp
strategy/market/: conditions.hpp
strategy/options/: README.md  call.hpp  condors.hpp  put.hpp  spreads.hpp  strangles.hpp
strategy/stocks/: README.md  long.hpp  short.hpp
strategy/structure/: macrostructure.hpp  microstructure.hpp
tests/: tradeDesk.cpp
